File input/output

--- a/RaylibSharp/RaylibCSDijkstra.csproj
+++ b/RaylibSharp/RaylibCSDijkstra.csproj
@@ -57,6 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CFG.cs" />
+    <Compile Include="FileIO.cs" />
     <Compile Include="Nodes.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
