--- a/RaylibSharp/RaylibCSDijkstra.csproj
+++ b/RaylibSharp/RaylibCSDijkstra.csproj
@@ -59,6 +59,7 @@
     <Compile Include="CFG.cs" />
     <Compile Include="FileIO.cs" />
     <Compile Include="Nodes.cs" />
+    <Compile Include="Prim.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Raylib.cs" />
