--- a/RaylibSharp/PBL2.csproj
+++ b/RaylibSharp/PBL2.csproj
@@ -56,11 +56,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CFG.cs" />
     <Compile Include="FileIO.cs" />
-    <Compile Include="MaxFlow.cs" />
+    <Compile Include="keyboardInteraction.cs" />
     <Compile Include="Nodes.cs" />
-    <Compile Include="Prim.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Raylib.cs" />
