--- a/RaylibSharp/PBL2.csproj
+++ b/RaylibSharp/PBL2.csproj
@@ -57,8 +57,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FileIO.cs" />
-    <Compile Include="keyboardInteraction.cs" />
-    <Compile Include="Nodes.cs" />
+    <Compile Include="KeyboardActions.cs" />
+    <Compile Include="NodeClass.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Raylib.cs" />
